# venabili

./: .gitignore  .gitmodules  Cargo.toml  Doxyfile  Makefile  README.md  book.json  libopencm3.rules.mk  memory.x  rust-toolchain.toml
.cargo/: config.toml
artwork/: Makefile
bootloader/: Makefile  bootloader.c  f103x8_base.ld  usbdfu.c
design/: split.dxf  split.dxf~
docs/: GLOSSARY.adoc  README.adoc  README.md  SUMMARY.adoc  building.adoc  customizing.adoc  firmware_guide.adoc  hardware_guide.adoc
schematics/: sym-lib-table  venabili-cache.lib  venabili-rescue.lib  venabili.bak  venabili.pro  venabili.sch  venabili.xml
scripts/: checks.sh
src/: Makefile  config.h  f103x8.ld  f103x8_boot_offset.ld  keyboard.c  keyboard.h  keys.c  keys.h  keys_internal.h  libopencm3.target.mk  macros.c  macros.h  main.c  mouse.h  rtc.c  rtc.h  sensing.c  sensing.h  usb.c  usb.h  usb_keyboard.c  usb_keyboard.h  usb_keys.h  usb_mouse.c  usb_mouse.h  venabili.c  venabili.d  venabili.elf  venabili.map
