[package]
edition = "2021"
name = "venabili"
version = "2.0.0"
license = "MIT OR Apache-2.0"
authors = ["Daniel Campoverde"]

[features]
default = ["nightly"]
nightly = [
    "embedded-hal-async",
    "embassy-executor/nightly",
    "embassy-nrf/nightly",
    "embassy-nrf/unstable-traits",
    "embassy-time/nightly",
    "embassy-time/unstable-traits",
    "static_cell/nightly",
    "embassy-usb",
    "embedded-io-async",
    "embedded-hal-bus/async",
]

[dependencies]
embassy-futures = { version = "0.1.0", path = "embassy/embassy-futures" }
embassy-sync = { version = "0.2.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.0", path = "embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", path = "embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt", "msos-descriptor",], optional = true }
embedded-io = { version = "0.5.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.5.0", optional = true, features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
usbd-hid = "0.6.0"
serde = { version = "1.0.136", default-features = false }
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
embedded-hal-bus = { version = "0.1.0-rc.1" }
num-integer = { version = "0.1.45", default-features = false }
microfft = "0.5.0"

[profile.release]
debug = 2
